# context-glyphdata

./: CASING_RULES.md  DEVELOPMENT.md  MANIFEST.in  PACKAGE_OVERVIEW.md  README.md  SCRIPTS_REFERENCE.md  TEST_COVERAGE.md  TEST_REFACTORING_SUMMARY.md  UPDATE_SUMMARY.md  pyproject.toml  setup.py
benchmarks/: glyph_names_with_hyphens.py  longest_names.py
examples/: basic_usage.py  casing_examples.py
src/context_glyphdata/: __init__.py  cli.py  core.py
tests/: __init__.py  test_glyph_names.py  test_script_coverage.py
