[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-glyphdata"
version = "0.1.0"
description = "Convert Unicode character descriptions to short camelCase glyph names"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "youseedee",
]

[project.urls]
Homepage = "https://github.com/yourusername/context-glyphdata"
Repository = "https://github.com/yourusername/context-glyphdata"

[project.scripts]
context-glyphdata = "context_glyphdata.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
